# example-cmake

./: CMakeLists.txt
include/: my_library.h
src/: my_library.cpp
tests/: CMakeLists.txt  my_library_test.cpp
